--- a/.gitignore
+++ b/.gitignore
@@ -38,13 +38,18 @@ Icon
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
 
+
 # Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
 Network Trash Folder
 Temporary Items
 .apdisk
+
+#Local Directories
+
 node_modules
+.next
 
 ### macOS Patch ###
 # iCloud generated files
