--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/network-connector": "^6.2.9",
     "next": "12.2.2",
+    "next-videos": "^1.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2"
