--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/video.js": "^7.3.42",
+    "@videojs/themes": "^1.0.1",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "prettier": "^2.7.1",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "video.js": "^7.20.1"
   }
 }
